# diario-oficial-mcp

./: LICENSE  README.es.md  README.md  pyproject.toml
diario_oficial_mcp/: __init__.py  client.py  server.py
tests/: test_smoke.py
