[project]
name = "diario-oficial-mcp"
version = "0.1.0"
description = "MCP server to obtain the Colombian Diario Oficial daily PDF from the Imprenta Nacional public portal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jkamilo81", email = "jkamilo@gmail.com" }]
keywords = ["mcp", "diario-oficial", "colombia", "imprenta-nacional", "pdf"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/jkamilo81/diario-oficial-mcp"
Repository = "https://github.com/jkamilo81/diario-oficial-mcp"

[project.scripts]
diario-oficial-mcp = "diario_oficial_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diario_oficial_mcp"]
